# willow-rs

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
compact_u64/: Cargo.toml
compact_u64/src/: lib.rs
data-model/: Cargo.toml
data-model/src/: entry.rs  lengthy_entry.rs  lib.rs  parameters.rs  path.rs  relative_encodings.rs  relative_encodings_old.rs  schemes.rs  store.rs
data-model/src/encoding/: bytes.rs  compact_width.rs  entry.rs  error.rs  max_power.rs  mod.rs  parameters.rs  parameters_sync.rs  path.rs  relativity.rs  shared_buffers.rs  traits.rs  traits_sync.rs  unsigned_int.rs
data-model/src/grouping/: area.rs  area_of_interest.rs  mod.rs  range.rs  range_3d.rs
data-model/src/groupings/: range.rs
data-model/src/path/: builder.rs  codec.rs  component.rs  mod.rs  representation.rs
data-model/src/private_encodings/: area.rs  mod.rs  path.rs
data-model/src/relative_encodings/: area_area.rs  entry_area.rs  entry_entry.rs  entry_range3d.rs  mod.rs  path_path.rs  range3d_range3d.rs
earthstar/: Cargo.toml
earthstar/src/: cinn25519.rs  identity_id.rs  lib.rs  namespace_id.rs
encoding/: Cargo.toml
encoding/src/: bytes.rs  compact_width.rs  error.rs  lib.rs  max_power.rs  traits.rs  traits_sync.rs  unsigned_int.rs
fairly_unsafe_cell/: Cargo.toml  README.md
fairly_unsafe_cell/src/: checked.rs  lib.rs  unchecked.rs
fuzz/: Cargo.toml  run_all.sh  targets.txt
fuzz/fuzz_targets/: area_map.rs  area_rel_area_encoding.rs  area_rel_area_encoding_random.rs  compact_u64_codec.rs  compact_u64_relative.rs  control_events.rs  enc_abs_path.rs  enc_area_rel_area.rs  enc_area_rel_privateareacontext.rs  enc_communalcapability_rel_personalprivateinterest.rs  enc_entry_abs.rs  enc_entry_rel_area.rs  enc_entry_rel_entry.rs  enc_entry_rel_range3d.rs  enc_enumerationcapability_rel_personalprivateinterest.rs  enc_mcauthorisationtoken_rel_pair.rs  enc_mccapability_rel_area.rs  enc_mcenumerationcapability_abs.rs  enc_mcsubspacecapability_abs.rs  enc_ownedcapability_rel_personalprivateinterest.rs  enc_path2_abs.rs  enc_path2_rel_path2.rs  enc_path3_abs.rs  enc_path3_rel_path3.rs  enc_path_rel_path.rs  enc_path_rel_privatepathcontext.rs  enc_pioannounceoverlap_rel_pair.rs  enc_piobindhash_abs.rs  enc_piobindreadcapability_rel_ppi.rs  enc_range3d_rel_range3d.rs  enc_reconciliationannounceentries_rel_range3d.rs  enc_reconciliationsendentry_rel_pair.rs  enc_reconciliationsendfingerprint_rel_range.rs  enc_reconciliationsendpayload_abs.rs  enc_reconcilitionterminatepayload_abs.rs  enc_subspacecapability_rel_personalprivateinterest.rs  enc_unverified_communal_capability_abs.rs  enc_unverified_mc_capability_abs.rs  enc_unverified_owned_capability_abs.rs  encoder_canonic_decoder.rs  (+91 more)
fuzz/src/: encode.rs  lib.rs  path.rs  placeholder_params.rs  relative_codec_dummy.rs  silly_sigs.rs  store.rs  store_events.rs
generated_testvectors/: README.md
generated_testvectors/EncodeCommunalCapability/dbg/: 3  32  35
generated_testvectors/EncodeCommunalCapability/nay/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  116  117  118  12  120  122  123  124  125  126  127  128  129  13  130  131  132  133  134  135  136  (+88 more)
generated_testvectors/EncodeCommunalCapability/yay/: 3  32
lcmux/: Cargo.toml  README.md
lcmux/src/: client.rs  client_logic.rs  frames.rs  guarantee_bound.rs  guarantee_cell.rs  lib.rs  server_logic.rs  session.rs
meadowcap/: Cargo.toml
meadowcap/src/: communal_capability.rs  lib.rs  mc_authorisation_token.rs  mc_capability.rs  mc_enumeration_capability.rs  mc_subspace_capability.rs  mccapability.rs  owned_capability.rs  parameters.rs  personal_private_interest.rs  silly_sigs.rs  subspace_capability.rs
meadowcap/src/private_interest_intersection/: mod.rs  personal_private_interest.rs
pio/: Cargo.toml
pio/src/: area.rs  lib.rs  path.rs  personal_private_interest.rs
sideload/: Cargo.toml
sideload/src/: lib.rs
src/data_model/: path.rs
store-simple-sled/: Cargo.toml
store_simple_sled/: Cargo.toml  README.md
store_simple_sled/src/: lib.rs
transport_encryption/: Cargo.toml  cargo.toml
transport_encryption/src/: encryption.rs  handshake.rs  handshake_states.rs  lib.rs  parameters.rs  test_parameters.rs
ufotofu_codec/: Cargo.toml  README.md
ufotofu_codec/src/: decode.rs  decode_error.rs  decoder.rs  encode.rs  lib.rs  proptest.rs  relative_decode.rs  relative_decoder.rs  relative_encode.rs  relative_encoder.rs
ufotofu_codec/src/adaptors/: encoder.rs  mod.rs  relative_decoder.rs  shared_decoder.rs  shared_encoder.rs  shared_relative_decoder.rs  shared_relative_encoder.rs
ufotofu_codec/src/proptest/: absolute.rs  basic.rs  relative.rs
ufotofu_codec_endian/: Cargo.toml  README.md
ufotofu_codec_endian/src/: lib.rs
wb_async_utils/: Cargo.toml  README.md
wb_async_utils/src/: lib.rs  mutex.rs  once_cell.rs  rw.rs  shared_consumer.rs  shared_producer.rs  shelf.rs  spsc.rs  take_cell.rs
wgps/: Cargo.toml
wgps/src/: lib.rs  max_payload_size_handling.rs  parameters.rs  ready_transport.rs  spsc_channel.rs  storedinator.rs
wgps/src/commitment_scheme/: execute_prelude.rs  mod.rs  receive_prelude.rs  send_prelude.rs
wgps/src/data_handles/: handle_store.rs  mod.rs
wgps/src/lcmux/: client_logic.rs  frames.rs  mod.rs
wgps/src/logical_channels/: client.rs  mod.rs  server.rs
wgps/src/messages/: commitment_reveal.rs  mod.rs
wgps/src/pio/: capable_aois.rs  mod.rs  overlap_finder.rs  salted_hashes.rs
wgps/src/rbsr/: mod.rs
wgps/src/util/: mod.rs  mpmc_channel.rs  nb_mutex.rs  shared_decoder.rs  shared_encoder.rs  spsc_channel.rs
willow-data-model/: Cargo.toml
willow-data-model/src/: data_model.rs
willow-utils/: Cargo.toml
willow-utils/src/: codec.rs  lib.rs
willow_25/: Cargo.toml  README.md
willow_25/src/: authorisation_token.rs  data_model.rs  lib.rs  meadowcap.rs  namespace.rs  payload_digest.rs  sideload.rs  signature.rs  subspace.rs
willow_test_vectors/: Cargo.toml
willow_test_vectors/src/: main.rs  path_extends_path.rs  vector_repo_readme.md
(+1677 files in other folders)
