[workspace]

members = [
    "data-model",
    "encoding",
    "fuzz",
    "lcmux",
    "meadowcap",
    "wgps",
    "store_simple_sled",
    "willow_25",
    "transport_encryption"
, "willow_test_vectors"]
resolver = "2"

[patch.crates-io]
ufotofu_codec = { path="../ufotofu/ufotofu_codec", features = ["std", "dev"] }
ufotofu = { path="../ufotofu/ufotofu", features = ["std", "dev"] }

[workspace.lints.clippy]
type_complexity = "allow"
