[package]
name = "willow-data-model"
version = "0.1.0"
edition = "2021"
description = "The datatypes of Willow, an eventually consistent data store with improved distributed deletion."
license = "MIT OR Apache-2.0"

[features]
default = []
dev = ["dep:arbitrary"]

[dependencies]
either = "1.10.0"
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
ufotofu = { version = "0.5.0", features = ["std"] }
bytes = "1.6.0"

[dependencies.willow-encoding]
path = "../encoding"
version = "0.1.0"

[dev-dependencies]
smol = "2.0.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[lints]
workspace = true


