[package]
name = "willow-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
ufotofu = { version = "0.6.0", features = ["std", "dev"] }
pollster = "0.4.0"
arbitrary = { version = "1.0.2", features = ["derive"] }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
signature = "2.2.0"
syncify = "0.1.0"
willow-encoding = { path = "../encoding" }
ufotofu_codec = { path = "../ufotofu_codec", features = [ "std", "dev" ] }
ufotofu_codec_endian = { path = "../ufotofu_codec_endian", features = [ "std" ] }
compact_u64 = { path = "../compact_u64", features = [ "std", "dev" ] }
either = "1.10.0"

[dependencies.willow-data-model]
path = "../data-model"
features = ["dev"]

[dependencies.meadowcap]
path = "../meadowcap"
features = ["dev"]

[dependencies.earthstar]
path = "../earthstar"

################
# compact_u64 #
###############

[[bin]]
name = "compact_u64_codec"
path = "fuzz_targets/compact_u64_codec.rs"
test = false
doc = false
bench = false

########################
# ufotofu_codec_endian #
########################

[[bin]]
name = "endian_u8_be"
path = "fuzz_targets/endian_u8_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u16_be"
path = "fuzz_targets/endian_u16_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u32_be"
path = "fuzz_targets/endian_u32_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u64_be"
path = "fuzz_targets/endian_u64_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u8_le"
path = "fuzz_targets/endian_u8_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u16_le"
path = "fuzz_targets/endian_u16_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u32_le"
path = "fuzz_targets/endian_u32_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u64_le"
path = "fuzz_targets/endian_u64_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i8_be"
path = "fuzz_targets/endian_i8_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i16_be"
path = "fuzz_targets/endian_i16_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i32_be"
path = "fuzz_targets/endian_i32_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i64_be"
path = "fuzz_targets/endian_i64_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i8_le"
path = "fuzz_targets/endian_i8_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i16_le"
path = "fuzz_targets/endian_i16_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i32_le"
path = "fuzz_targets/endian_i32_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i64_le"
path = "fuzz_targets/endian_i64_le.rs"
test = false
doc = false
bench = false

#################
# ufotofu_codec #
#################

[[bin]]
name = "encoder_decoder"
path = "fuzz_targets/encoder_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encoder_canonic_decoder"
path = "fuzz_targets/encoder_canonic_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encoder_decoder_relative"
path = "fuzz_targets/encoder_decoder_relative.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encoder_canonic_decoder_relative"
path = "fuzz_targets/encoder_canonic_decoder_relative.rs"
test = false
doc = false
bench = false

#########
# Other #
#########

[[bin]]
name = "path"
path = "fuzz_targets/path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path2"
path = "fuzz_targets/path2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path3"
path = "fuzz_targets/path3.rs"
test = false
doc = false
bench = false


[[bin]]
name = "path4"
path = "fuzz_targets/path4.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_successor"
path = "fuzz_targets/path_successor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_successor_more"
path = "fuzz_targets/path_successor_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_successor_even_more"
path = "fuzz_targets/path_successor_even_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "successor_of_prefix"
path = "fuzz_targets/successor_of_prefix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "successor_of_prefix_more"
path = "fuzz_targets/successor_of_prefix_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "successor_of_prefix_even_more"
path = "fuzz_targets/successor_of_prefix_even_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path_abs"
path = "fuzz_targets/enc_path_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path2_abs"
path = "fuzz_targets/enc_path2_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path3_abs"
path = "fuzz_targets/enc_path3_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "entry_encoding"
path = "fuzz_targets/entry_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "entry_encoding_random"
path = "fuzz_targets/entry_encoding_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u8be_encoding"
path = "fuzz_targets/u8be_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u8be_encoding_random"
path = "fuzz_targets/u8be_encoding_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u16be_encoding"
path = "fuzz_targets/u16be_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u16be_encoding_random"
path = "fuzz_targets/u16be_encoding_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u32be_encoding"
path = "fuzz_targets/u32be_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u32be_encoding_random"
path = "fuzz_targets/u32be_encoding_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u64be_encoding"
path = "fuzz_targets/u64be_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u64be_encoding_random"
path = "fuzz_targets/u64be_encoding_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_capability_delegation"
path = "fuzz_targets/mc_capability_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_capability_append_delegation"
path = "fuzz_targets/mc_capability_append_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_is_authorised_write"
path = "fuzz_targets/mc_is_authorised_write.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_subspace_capability_delegation"
path = "fuzz_targets/mc_subspace_capability_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_subspace_capability_append_delegation"
path = "fuzz_targets/mc_subspace_capability_append_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_subspace_capability_encoding"
path = "fuzz_targets/mc_subspace_capability_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_subspace_capability_encoding_random"
path = "fuzz_targets/mc_subspace_capability_encoding_random.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path_rel_path"
path = "fuzz_targets/enc_path_rel_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path2_rel_path2"
path = "fuzz_targets/enc_path2_rel_path2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path3_rel_path3"
path = "fuzz_targets/enc_path3_rel_path3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_abs"
path = "fuzz_targets/enc_entry_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_rel_entry"
path = "fuzz_targets/enc_entry_rel_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_rel_area"
path = "fuzz_targets/enc_entry_rel_area.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_rel_range3d"
path = "fuzz_targets/enc_entry_rel_range3d.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_area_rel_area"
path = "fuzz_targets/enc_area_rel_area.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_range3d_rel_range3d"
path = "fuzz_targets/enc_range3d_rel_range3d.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_mccapability_rel_area"
path = "fuzz_targets/enc_mccapability_rel_area.rs"
test = false
doc = false
bench = false