[package]
name = "willow-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
ufotofu = { version = "0.7.1", features = ["std", "dev"] }
# ufotofu = { path = "../../ufotofu/ufotofu", features = ["std", "dev"] }
ufotofu_codec = { version = "0.1.3", features = ["std", "dev"] }
ufotofu_codec_endian = { version = "0.2.0", features = ["std"] }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
wb_async_utils = { version = "0.2.0", features = ["ufotofu_utils"] }
compact_u64 = { version = "0.2.0", features = ["std", "dev"] }
pollster = "0.4.0"
arbitrary = { version = "1.0.2", features = ["derive"] }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
signature = "2.2.0"
syncify = "0.1.0"
willow-encoding = { path = "../encoding" }
either = "1.10.0"
futures = { version = "0.3.31" }
willow-store-simple-sled = { path = "../store_simple_sled" }
sled = "0.34.7"
tempdir = "0.3.7"
willow-transport-encryption = { path = "../transport_encryption" }
willow_25 = { path = "../willow_25", features = ["dev"] }
wgps = { path = "../wgps", features = ["dev"] }
willow-pio = { version = "0.1.0", path = "../pio", features = ["dev"] }

[dependencies.willow-data-model]
path = "../data-model"
features = ["dev"]

[dependencies.meadowcap]
path = "../meadowcap"
features = ["dev"]

################
# compact_u64 #
###############

[[bin]]
name = "compact_u64_codec"
path = "fuzz_targets/compact_u64_codec.rs"
test = false
doc = false
bench = false

########################
# ufotofu_codec_endian #
########################

[[bin]]
name = "endian_u8_be"
path = "fuzz_targets/endian_u8_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u16_be"
path = "fuzz_targets/endian_u16_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u32_be"
path = "fuzz_targets/endian_u32_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u64_be"
path = "fuzz_targets/endian_u64_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u8_le"
path = "fuzz_targets/endian_u8_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u16_le"
path = "fuzz_targets/endian_u16_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u32_le"
path = "fuzz_targets/endian_u32_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_u64_le"
path = "fuzz_targets/endian_u64_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i8_be"
path = "fuzz_targets/endian_i8_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i16_be"
path = "fuzz_targets/endian_i16_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i32_be"
path = "fuzz_targets/endian_i32_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i64_be"
path = "fuzz_targets/endian_i64_be.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i8_le"
path = "fuzz_targets/endian_i8_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i16_le"
path = "fuzz_targets/endian_i16_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i32_le"
path = "fuzz_targets/endian_i32_le.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endian_i64_le"
path = "fuzz_targets/endian_i64_le.rs"
test = false
doc = false
bench = false

##################
# wb_async_utils #
##################

[[bin]]
name = "spsc"
path = "fuzz_targets/spsc.rs"
test = false
doc = false
bench = false

#########
# Other #
#########

[[bin]]
name = "path"
path = "fuzz_targets/path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path2"
path = "fuzz_targets/path2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path3"
path = "fuzz_targets/path3.rs"
test = false
doc = false
bench = false


[[bin]]
name = "path4"
path = "fuzz_targets/path4.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_successor"
path = "fuzz_targets/path_successor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_successor_more"
path = "fuzz_targets/path_successor_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_successor_even_more"
path = "fuzz_targets/path_successor_even_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "successor_of_prefix"
path = "fuzz_targets/successor_of_prefix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "successor_of_prefix_more"
path = "fuzz_targets/successor_of_prefix_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "successor_of_prefix_even_more"
path = "fuzz_targets/successor_of_prefix_even_more.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path_abs"
path = "fuzz_targets/enc_path_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path2_abs"
path = "fuzz_targets/enc_path2_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path3_abs"
path = "fuzz_targets/enc_path3_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_capability_delegation"
path = "fuzz_targets/mc_capability_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_capability_append_delegation"
path = "fuzz_targets/mc_capability_append_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_is_authorised_write"
path = "fuzz_targets/mc_is_authorised_write.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_subspace_capability_delegation"
path = "fuzz_targets/mc_subspace_capability_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mc_subspace_capability_append_delegation"
path = "fuzz_targets/mc_subspace_capability_append_delegation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path_rel_path"
path = "fuzz_targets/enc_path_rel_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path2_rel_path2"
path = "fuzz_targets/enc_path2_rel_path2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path3_rel_path3"
path = "fuzz_targets/enc_path3_rel_path3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_abs"
path = "fuzz_targets/enc_entry_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_rel_entry"
path = "fuzz_targets/enc_entry_rel_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_rel_area"
path = "fuzz_targets/enc_entry_rel_area.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_entry_rel_range3d"
path = "fuzz_targets/enc_entry_rel_range3d.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_area_rel_area"
path = "fuzz_targets/enc_area_rel_area.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_range3d_rel_range3d"
path = "fuzz_targets/enc_range3d_rel_range3d.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_mccapability_rel_area"
path = "fuzz_targets/enc_mccapability_rel_area.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_mcenumerationcapability_abs"
path = "fuzz_targets/enc_mcenumerationcapability_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_path_rel_privatepathcontext"
path = "fuzz_targets/enc_path_rel_privatepathcontext.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store"
path = "fuzz_targets/store.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_area_rel_privateareacontext"
path = "fuzz_targets/enc_area_rel_privateareacontext.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_communalcapability_rel_personalprivateinterest"
path = "fuzz_targets/enc_communalcapability_rel_personalprivateinterest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_ownedcapability_rel_personalprivateinterest"
path = "fuzz_targets/enc_ownedcapability_rel_personalprivateinterest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_enumerationcapability_rel_personalprivateinterest"
path = "fuzz_targets/enc_enumerationcapability_rel_personalprivateinterest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "control_events"
path = "fuzz_targets/control_events.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_unverified_communal_capability_abs"
path = "fuzz_targets/enc_unverified_communal_capability_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_unverified_owned_capability_abs"
path = "fuzz_targets/enc_unverified_owned_capability_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_unverified_mc_capability_abs"
path = "fuzz_targets/enc_unverified_mc_capability_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "area_map"
path = "fuzz_targets/area_map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "namespaced_area_map"
path = "fuzz_targets/namespaced_area_map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_piobindhash_abs"
path = "fuzz_targets/enc_piobindhash_abs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_pioannounceoverlap_rel_pair"
path = "fuzz_targets/enc_pioannounceoverlap_rel_pair.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_piobindreadcapability_rel_ppi"
path = "fuzz_targets/enc_piobindreadcapability_rel_ppi.rs"
test = false
doc = false
bench = false

##############################
# compactransport_encryption #
##############################

[[bin]]
name = "transport_encryption"
path = "fuzz_targets/transport_encryption.rs"
test = false
doc = false
bench = false

####################################
# willow 25 test vector generation #
####################################

[[bin]]
name = "testvector_EncodePath"
path = "fuzz_targets/testvector_EncodePath.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_encode_path"
path = "fuzz_targets/testvector_encode_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodePathRelativePath"
path = "fuzz_targets/testvector_EncodePathRelativePath.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_path_rel_path"
path = "fuzz_targets/testvector_path_rel_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodePathExtendsPath"
path = "fuzz_targets/testvector_EncodePathExtendsPath.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_path_extends_path"
path = "fuzz_targets/testvector_path_extends_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeEntry"
path = "fuzz_targets/testvector_EncodeEntry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_encode_entry"
path = "fuzz_targets/testvector_encode_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeEntryRelativeEntry"
path = "fuzz_targets/testvector_EncodeEntryRelativeEntry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeEntryInNamespace3dRange"
path = "fuzz_targets/testvector_EncodeEntryInNamespace3dRange.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeAreaInArea"
path = "fuzz_targets/testvector_EncodeAreaInArea.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_area_in_area"
path = "fuzz_targets/testvector_area_in_area.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_Encode3dRangeRelative3dRange"
path = "fuzz_targets/testvector_Encode3dRangeRelative3dRange.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeCommunalCapability"
path = "fuzz_targets/testvector_EncodeCommunalCapability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeOwnedCapability"
path = "fuzz_targets/testvector_EncodeOwnedCapability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeMcCapability"
path = "fuzz_targets/testvector_EncodeMcCapability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "testvector_EncodeMcEnumerationCapability"
path = "fuzz_targets/testvector_EncodeMcEnumerationCapability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enc_reconciliationsendfingerprint_rel_range"
path = "fuzz_targets/enc_reconciliationsendfingerprint_rel_range.rs"
test = false
doc = false
bench = false
