[package]
name = "lcmux"
version = "0.1.0"
edition = "2021"

[dependencies]
ufotofu = { version = "0.7.1", features = ["std"] }
ufotofu_codec = { version = "0.1.3" }
ufotofu_codec_endian = { version = "0.2.0" }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
wb_async_utils = { version = "0.2.0", features = ["ufotofu_utils"] }
compact_u64 = { version = "0.2.0" }
either = "1.10.0"
async_cell = "0.2.2"
futures = { version = "0.3.31" }
willow-encoding = { path = "../encoding", version = "0.1.0" }

[dev-dependencies]
smol = "2.0.2"

[lints]
workspace = true
