[package]
name = "meadowcap"
version = "0.2.0"
edition = "2021"
description = "A capability system for controlling access to Willow data."
license = "MIT OR Apache-2.0"

[features]
default = []
dev = ["dep:arbitrary", "willow-data-model/dev", "willow-pio/dev"]

[dependencies]
ufotofu = { version = "0.7.0", features = ["std"] }
ufotofu_codec = { version = "0.1.3", features = ["alloc"] }
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
either = "1.13.0"
signature = "2.2.0"
willow-encoding = { path = "../encoding", version = "0.1.0" }
willow-data-model = { path = "../data-model", version = "0.2.0" }
compact_u64 = { version = "0.1.0", features = ["std", "dev"] }
willow-pio = { version = "0.1.0", path = "../pio" }

[lints]
workspace = true
