[package]
name = "willow-pio"
version = "0.1.0"
edition = "2021"
description = "Utilities for private interest overlap"
license = "MIT OR Apache-2.0"

[features]
default = []
dev = ["dep:arbitrary", "willow-data-model/dev"]

[dependencies]
ufotofu = { version = "0.7.0", features = [
    "std",
    "dev",
] } # Cargo does not support enabling a feature (`"dev"`) only during testing =(
ufotofu_codec = { version = "0.1.3" }
willow-data-model = { path = "../data-model", version = "0.2.0" }
compact_u64 = { version = "0.1.0", features = ["std", "dev"] }
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
willow-encoding = { path = "../encoding", version = "0.1.0" }

[dev-dependencies]
pollster = "0.4.0"

[lints]
workspace = true
