[package]
name = "willow-store-simple-sled"
version = "0.1.0"
edition = "2021"
description = "Simple persistent storage for Willow data"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
ufotofu = { version = "0.7.1" }
ufotofu_codec = { version = "0.1.3" }
ufotofu_codec_endian = { version = "0.2.0" }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
wb_async_utils = { version = "0.2.0", features = ["ufotofu_utils"] }
sled = "0.34.7"
willow-data-model = { path = "../data-model", version = "0.2.0" }
either = "1.10.0"
wb_async_utils = { version = "0.1.3", features = ["ufotofu_utils"] }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
willow-sideload = { path = "../sideload", version = "0.1.0" }

[dev-dependencies]
willow_25 = { path = "../willow_25", version = "0.1.0" }
